# aa-acl-checker

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
acl_checker/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  providers.py  tasks.py  urls.py  views.py
acl_checker/management/commands/: acl_checker_setup.py
acl_checker/migrations/: 0001_initial.py  0002_config.py
acl_checker/templates/acl_checker/: base.html  index.html
acl_checker/tests/: test_acl_checker.py  test_models.py  test_tasks.py  test_views.py
testauth/settings/: local.py
