[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-acl-checker"
description = "Flags characters that are on an ESI ACL but not registered in Alliance Auth"
readme = "README.md"
keywords = [
    "acl",
    "allianceauth",
    "esi",
]
license = { file = "LICENSE" }
authors = [
    { name = "Aaron Kable", email = "aaronkable@gmail.com" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=5",
    "django-esi>=9",
    "django-solo",
]
urls.Changelog = "https://github.com/aaronkable/aa-acl-checker/blob/master/CHANGELOG.md"
urls.Tracker = "https://github.com/aaronkable/aa-acl-checker/issues"

[tool.hatch]
version.path = "acl_checker/__init__.py"
build.include = [
    "/acl_checker",
]
